Fixed iOS CSS causing text to be unreadable on Android

--- a/styles/_common.scss
+++ b/styles/_common.scss
@@ -153,9 +153,3 @@ QLabel#label_image {
   padding: 0px;
   margin: 0px;
 }
-
-#HomeView {
-  QLabel#versionLabel {
-    font-size: 12px;
-  }
-}
