--- a/styles/android.scss
+++ b/styles/android.scss
@@ -17,3 +17,9 @@
     }
   }
 }
+
+#HomeView {
+  QLabel#versionLabel {
+    font-size: 2em;
+  }
+}
