--- a/styles/app.css
+++ b/styles/app.css
@@ -122,7 +122,4 @@ QLabel#label_image {
   padding: 0px;
   margin: 0px; }
 
-#HomeView QLabel#versionLabel {
-  font-size: 12px; }
-
 /*# sourceMappingURL=app.css.map */
