--- a/styles/ios.scss
+++ b/styles/ios.scss
@@ -12,3 +12,9 @@
     // margin-bottom: .2em;
   }
 }
+
+#HomeView {
+  QLabel#versionLabel {
+    font-size: 12px;
+  }
+}
